# SPHinXsys

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  LICENSE  OPHELIE_DOCUMENTATION_INDEX.md  README.md  aphi_matrix_free_development_plan.tex  aphi_matrix_free_particle_discretization_notes.tex  build.sh  contributing.md  dev.Dockerfile  dev.sycl.Dockerfile  docker-compose.yaml  index.html  install_SPHinXsys.txt  install_SPHinXsys_Windows.docx  learning-code.docx  oneTBB  package.json  wasm-new.Dockerfile
SPHINXsys/: CMakeLists.txt  SPHinXsys_Refactoring.md  cell_linked_list_record.txt  coding_SPHinXsys.md  mainpage.md  masssoud_beta_merged.files  masssoud_beta_merged.includes
SPHINXsys/cmake/: Dirsearch_for_2D_build.cmake  Dirsearch_for_3D_build.cmake  Dirsearch_for_image_process.cmake  Dirsearch_shared.cmake  Headersearch.cmake  Simbody_header_directories.cmake  oneTBB_header_directory.cmake
SPHINXsys/src/: CMakeLists.txt
SPHINXsys/src/for_2D_build/: CMakeLists.txt
SPHINXsys/src/for_3D_build/: CMakeLists.txt
SPHINXsys/src/oneTBB/: CMakeLists.txt
SPHINXsys/src/shared/: CMakeLists.txt
cases_test/: CMakeLists.txt
cases_test/test_1d_shock_tube/src/: shock_tube.cpp  shock_tube.h
cases_test/test_2d_T_shaped_pipe/src/: T_shaped_pipe.cpp
cases_test/test_2d_airfoil/: CMakeLists.txt  airfoil_2d.cpp  airfoil_2d.h
cases_test/test_2d_collision/src/: collision.cpp
cases_test/test_2d_dambreak/src/: CMakeLists.txt  Dambreak.cpp
cases_test/test_2d_depolarization/src/: depolarization.cpp
cases_test/test_2d_diffusion/src/: diffusion.cpp
cases_test/test_2d_elastic_gate/src/: elastic_gate.cpp
cases_test/test_2d_eulerian_taylor_green/src/: 2d_eulerian_taylor_green.cpp
cases_test/test_2d_filling_tank/src/: CMakeLists.txt  filling_tank.cpp
cases_test/test_2d_flow_around_cylinder/src/: 2d_flow_around_cylinder.cpp  2d_flow_around_cylinder.h
cases_test/test_2d_free_stream_around_cylinder/src/: 2d_free_stream_around_cylinder.h  CMakeLists.txt
cases_test/test_2d_fsi2/src/: CMakeLists.txt  fsi2.cpp  fsi2_case.h
cases_test/test_2d_fsi2_particle_relaxation/src/: particle_relaxation.cpp
cases_test/test_2d_heat_transfer/src/: heat_transfer.cpp
cases_test/test_2d_hydrostatic_fsi/src/: hydrostatic_fsi.cpp
cases_test/test_2d_oscillating_beam/src/: oscillating_beam.cpp
cases_test/test_2d_oscillating_beam_one_body_version/src/: oscillating_beam.cpp
cases_test/test_2d_owsc/src/: CMakeLists.txt  case.h  owsc.cpp
cases_test/test_2d_parallel_scaling/src/: parallel_scaling.cpp
cases_test/test_2d_particle_generator_single_resolution/: CMakeLists.txt  particle_generator_single_resolution.cpp  particle_generator_single_resolution.h
cases_test/test_2d_plate/src/: 2d_plate.cpp  CMakeLists.txt
cases_test/test_2d_poiseuille_flow/src/: poiseuille_flow.cpp
cases_test/test_2d_shell/src/: 2d_shell.cpp  CMakeLists.txt
cases_test/test_2d_sliding/src/: sliding.cpp
cases_test/test_2d_square_droplet/src/: CMakeLists.txt  case.h  droplet.cpp
cases_test/test_2d_static_confinement/src/: static_confinement.cpp
cases_test/test_2d_taylor_green/src/: CMakeLists.txt  taylor_green.cpp
cases_test/test_2d_tethered_dead_fish_in_flow/src/: CMakeLists.txt  fish_and_bones.h  tethered_dead_fish_in_flow.cpp
cases_test/test_2d_throat/src/: throat.cpp
cases_test/test_2d_two_phase_dambreak/src/: case.h  two_phase_dambreak.cpp
cases_test/test_2d_wave_elastic_wall/src/: CMakeLists.txt  wave_wall.cpp
cases_test/test_2d_wetting_effects/src/: case.h  wetting.cpp
cases_test/test_3d_TAH_path/: CMakeLists.txt  sim_total_artificial_heart.h  total_artificial_heart.cpp
cases_test/test_3d_TAH_path/input/: Aorta.stl  Diaphragm.stl  PA.stl  RA.stl
cases_test/test_3d_arch/src/: 3d_arch.cpp  CMakeLists.txt
cases_test/test_3d_cantilever/src/: CMakeLists.txt  cantilever.cpp
cases_test/test_3d_dambreak/src/: CMakeLists.txt  Dambreak.cpp
cases_test/test_3d_fsi/src/: CMakeLists.txt  fsi.cpp
cases_test/test_3d_heart_electromechanics/: CMakeLists.txt  excitation-contraction.cpp
cases_test/test_3d_heart_electromechanics/reload/: Material_LocallyOrthotropicMuscle_rld.xml  SPHBody_ContractionHeart_rld.xml
cases_test/test_3d_muscle_compression/: CMakeLists.txt
cases_test/test_3d_muscle_compression/src/: CMakeLists.txt  muscle_contact.cpp
cases_test/test_3d_muscle_compression_soft_body_contact/src/: CMakeLists.txt  muscle_contact_soft_body_contact.cpp
cases_test/test_3d_network/: CMakeLists.txt  net_work.cpp  sphere.h
cases_test/test_3d_particle_generation/: CMakeLists.txt  case.h  particle_generation.cpp
cases_test/test_3d_particle_generation_shell/: CMakeLists.txt  case.h  particle_generation_shell.cpp
cases_test/test_3d_particle_generator_single_resolution/: CMakeLists.txt  particle_generator_single_resolution_3D.cpp
cases_test/test_3d_pkj_lv_electrocontraction/: CMakeLists.txt  case.h  pkj-lv-electrocontraction.cpp
cases_test/test_3d_read_heart/: CMakeLists.txt  heart_reader.cpp
cases_test/test_3d_unit/: CMakeLists.txt  test_high_level_structural_class.cpp
modules/: CMakeLists.txt
modules/Palace/: CMakeLists.txt  palace_interface.cpp  palace_interface.hpp  palace_magnetostatic_interface.cpp  palace_magnetostatic_interface.hpp  sphinxsys_palace_interface.cpp  sphinxsys_palace_interface.hpp
modules/opencascade/: CMakeLists.txt
modules/structural_simulation/: CMakeLists.txt  structural_simulation_class.cpp  structural_simulation_class.h
opencascade_modules/: CMakeLists.txt
opencascade_modules/aortic_valve_simulation/: opencascade.h  relax_dynamics_surface.h  surface_shape.cpp  surface_shape.h  vector.h
opencascade_tests/: CMakeLists.txt
src/: CMakeLists.txt  Readme.txt
tests/: CMakeLists.txt
tests/2d_examples/: CMakeLists.txt
tests/3d_examples/: CMakeLists.txt
tests/extra_source_and_tests/: CMakeLists.txt
tests/tests_sycl/: CMakeLists.txt
tests/unit_tests_src/: CMakeLists.txt
tests/user_examples/: CMakeLists.txt
tests/webassembly_models/: CMakeLists.txt
(+9995 files in other folders)
