SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

if (NOT ONLY_3D)
	FOREACH(subdir ${SUBDIRS})
		#MESSAGE("${subdir}")
		ADD_SUBDIRECTORY(${subdir})
	ENDFOREACH()
else()
	if(NOT WASM_BUILD)
		ADD_SUBDIRECTORY(test_3d_arch)
		ADD_SUBDIRECTORY(test_3d_dambreak)
		ADD_SUBDIRECTORY(test_3d_heart_electromechanics)
		ADD_SUBDIRECTORY(test_3d_muscle_compression)
		ADD_SUBDIRECTORY(test_3d_myocaridum)
		ADD_SUBDIRECTORY(test_3d_network)
		ADD_SUBDIRECTORY(test_3d_particle_generation)
		ADD_SUBDIRECTORY(test_3d_passive_cantilever)
		ADD_SUBDIRECTORY(test_3d_passive_cantilever_neohookean)
		ADD_SUBDIRECTORY(test_3d_play_simbody)
		ADD_SUBDIRECTORY(test_3d_roof)
		ADD_SUBDIRECTORY(test_3d_thin_plate)
		ADD_SUBDIRECTORY(test_3d_twisting_column)
	endif(NOT WASM_BUILD)
endif()