SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

if(NOT WASM_BUILD)
	if (NOT ONLY_3D)
		FOREACH(subdir ${SUBDIRS})
			ADD_SUBDIRECTORY(${subdir})
		ENDFOREACH()
	else()
		FOREACH(subdir ${SUBDIRS})
			if(subdir MATCHES "^test_3d")
				ADD_SUBDIRECTORY(${subdir})
			endif()
		ENDFOREACH()
	endif()
endif(NOT WASM_BUILD)