option(SPHINXSYS_BUILD_2D_EXAMPLES "SPHINXSYS_BUILD_2D_EXAMPLES" ON)
option(SPHINXSYS_BUILD_3D_EXAMPLES "SPHINXSYS_BUILD_3D_EXAMPLES" ON)
option(SPHINXSYS_BUILD_UNIT_TESTS "SPHINXSYS_BUILD_UNIT_TESTS" ON)


find_package(GTest CONFIG REQUIRED)
include(GoogleTest)

if(SPHINXSYS_2D AND SPHINXSYS_BUILD_2D_EXAMPLES)
	ADD_SUBDIRECTORY(2d_examples)
endif()

if(SPHINXSYS_BUILD_UNIT_TESTS)
	ADD_SUBDIRECTORY(unit_tests_src)
endif()

add_subdirectory(modules)
	
if(SPHINXSYS_3D AND SPHINXSYS_BUILD_3D_EXAMPLES)
	ADD_SUBDIRECTORY(3d_examples)
   if(EMSCRIPTEN)
	ADD_SUBDIRECTORY(webassembly_models)
  endif()
endif()

STRING( REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} )
PROJECT("${CURRENT_FOLDER}")

SET(PYTHONSCRIPTSTORE ${PROJECT_BINARY_DIR}/PythonScript)
